🔧 ApiResponse統一: バックエンド・フロントエンド完全対応完了
## バックエンド変更 (Backend Changes)
- **QueryController**: 全15+エンドポイントをApiResponse<T>ラッパー対応
  - 保存クエリCRUD操作、履歴取得、統計情報取得
  - 統一エラーハンドリング: ApiResponse.error()使用
- **QueryBuilderController**: 全エンドポイントApiResponse対応
  - クエリ構築、バリデーション、サジェスション機能

## フロントエンド変更 (Frontend Changes)
- **8コンポネント完全更新**:
  - SavedQueries, QueryHistory, SqlExecution, QueryBuilder
  - ConnectionManagement, SchemaViewer, Register, AuthContext
- **API呼び出し修正**: `.json()` → `.data` プロパティアクセス
- **エラーハンドリング改善**: `response.error` 配列対応
- **型安全性向上**: ApiResponse<T>形式対応

## テスト結果 (Test Results)
✅ ビルド成功・実行確認済み
✅ Health/Register/Login全エンドポイント動作確認

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>